--- a/1-learning-nodejs/05_01/index.html
+++ b/1-learning-nodejs/05_01/index.html
@@ -27,10 +27,21 @@
             var message = {name: "Jim", message: "Hey Dwight!"}
             addMessage(message) 
           })
+
+          getMessages()
       })
 
       function addMessage(message) {
           $("#messages").append(`<h4> ${message.name} </h4> <p> ${message.message} </p>`)
+      }
+
+      function getMessages() {
+          $.get("http://localhost:3000/messages", (data) => {
+            //   data.forEach(element => {
+            //       addMessage(element)
+            //   });
+            data.forEach(addMessage)
+          })
       }
   </script>
 </html>
